K8S/events-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventmicroservice-srv
spec:
  type: NodePort
  selector:
    app: eventmicroservice
  ports:
    - name: eventmicroservice
      protocol: TCP
      port: 80
      targetPort: 80
